tests/test_files/errors/dot_tup.over
tup: (1 2 3)
dot: tup.3
